--- a/style.css
+++ b/style.css
@@ -1,32 +1,40 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: "Courier New", Courier, monospace;
-}
+body {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    }
+    h2 {
+    margin: 0 auto;
+    font-size: 35px;
+    margin: 10px;
+    }
+    .flex-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-.body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  flex-direction: column;
-}
+    }
+    .flex-column {
+    height: 100%;
+    width: 100%;
+    flex-direction: column;
+    }
+    .flex-wrap {
+    flex-wrap: wrap;
+    height: 432px;
+    width: 432px;
+    }
 
-.cell {
-  width: 100px;
-  height: 100px;
-  border: 2px solid black;
-  background-color: whitesmoke;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-}
-
-.board {
-  display: grid;
-  grid-template-columns: repeat(3, 100px);
-  grid-template-rows: repeat(3, 100px);
-  gap: 5px;
-  margin-bottom: 20px;
-}
+    .square {
+    border: 2px solid rgba(0, 0, 0, .75);
+    height: 140px;
+    width: 140px;
+    }
+    
+    #reset-button {
+    text-align: center;
+    font-size: 20px;
+    border: 1px solid black;
+    height: 55px;
+    width: 100px;
+    margin: 10px;
+    }
